Refactor to use List instead of arrays for player data
Replaces arrays with List collections for player order, colors, names, and related data structures throughout the Model, Controller, and View layers. Updates method signatures, constructors, and internal logic to use List types, improving type safety and consistency. Removes IntegrationTests and updates observer interfaces and persistence logic to reflect these changes.